Refactor AnswerQuestionMessage and CategoryRound to support multiple answers and improve game state management